--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -3,15 +3,19 @@
   padding-bottom: 7rem;
   position: relative;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
-  gap: 3rem 2rem;
 }
 .underline {
   height: 0.2rem;
   width: 7rem;
   background: var(--primary-design);
   margin: -1rem auto 0px;
+}
+
+.list__projects {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  gap: 3rem 2rem;
 }
 
 .btn-group {
